<resources>
    <string name="app_name">Practica1</string>
    <string name="getText">Texto de entrada</string>
    <string name="seeGraphs">Ver graficas</string>
    <string name="textPreview">Ingrese el texto</string>
    <string name="compile">Compilar</string>
    <string name="reports">Ver reportes</string>
    <string name="scroll">Scrollable view</string>
    <string name="Info">Más información</string>
    <string name="empty">Del</string>
    <string name="report_errors">Errores</string>
    <string name="report_ls">Sintácticos y léxicos</string>
    <string name="report_sem">Semánticos</string>
    <string name="report_maths">Ocurrencias de operadores matemáticos</string>
    <string name="report_count">Gráficos definidos</string>
    <string name="report_title">Reportes</string>
</resources>