<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportsActivity">

    <TextView
        android:id="@+id/tvReportErrors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/report_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/svMainTableError"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svMainTableError"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReportErrors">

        <LinearLayout
            android:id="@+id/layoutTable1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/svTable1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="vertical">

                <HorizontalScrollView
                    android:id="@+id/hsvTable1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvSeman"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/report_maths"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toTopOf="@+id/tlTableErrors"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TableLayout
                            android:id="@+id/tlTableMaths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"></TableLayout>

                        <TextView
                            android:id="@+id/tvLexical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/report_count"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toTopOf="@+id/tlTableErrorsSintax"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TableLayout
                            android:id="@+id/tlTableCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"></TableLayout>
                    </LinearLayout>
                </HorizontalScrollView>
            </ScrollView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>